<resources>
    <string name="app_name">Localite</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="new_here">New Here?</string>
    <string name="counsumer">consumer</string>
    <string name="provider">provider</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="comapany_name">Comapany name</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="sign_out">Sign out</string>
    <string name="show_chat_history">Show chat history</string>
    <string name="bussiness_name">Bussiness Name</string>
    <string name="bussiness_type">Bussiness type</string>
    <string name="provider_sign_in">Provider sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="navigate">Navigate</string>
    <string name="pay">Pay</string>
    <string name="text_here">Text here</string>
    <string name="send">Send</string>
    <string name="title_activity_provider_front_page">activity_provider_front_page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="approve">Approve</string>

    <string name="access_token" translatable="false">sk.eyJ1IjoiYXJ5YW4tMDA3NyIsImEiOiJjazBwY2lpbDUwaWNxM2NwcDhtbG9sYTIyIn0.sNTfkpX3F7Volqx7sPhWOQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="navigation_guidance_day" translatable="false">mapbox://styles/mapbox/navigation-guidance-day-v4</string>

</resources>
