<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderSignIn">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Provider sign in"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pname"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="90dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="108dp"
                android:layout_marginRight="108dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/pbusst"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="108dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/bussiness_type" />

            <EditText
                android:id="@+id/pcom"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="108dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/comapany_name" />

            <EditText
                android:id="@+id/pemail"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="108dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/paddr"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="108dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/pphone"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="108dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/psignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="108dp"
                android:text="Sign me up!" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>